<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.recurly.v3</groupId>
    <artifactId>api-client</artifactId>
    <version>3.9.0-SNAPSHOT</version>

    <name>Recurly API V3 Java Client</name>
    <description>The official Java client for Recurly's V3 API.</description>
    <url>https://github.com/recurly/recurly-client-java</url>

    <licenses>
      <license>
        <name>MIT License</name>
        <url>http://www.opensource.org/licenses/mit-license.php</url>
      </license>
    </licenses>

    <developers>
      <developer>
        <name>Benjamin Eckel</name>
        <email>dx@recurly.com</email>
        <organization>Recurly</organization>
        <organizationUrl>https://recurly.com</organizationUrl>
      </developer>
      <developer>
        <name>Aaron Suarez</name>
        <email>dx@recurly.com</email>
        <organization>Recurly</organization>
        <organizationUrl>https://recurly.com</organizationUrl>
      </developer>
      <developer>
        <name>Douglas Miller</name>
        <email>dx@recurly.com</email>
        <organization>Recurly</organization>
        <organizationUrl>https://recurly.com</organizationUrl>
      </developer>
    </developers>

    <scm>
      <connection>scm:git:git://github.com/recurly/recurly-client-java.git</connection>
      <developerConnection>scm:git:ssh://github.com:recurly/recurly-client-java.git</developerConnection>
      <url>https://github.com/recurly/recurly-client-java</url>
    </scm>

    <distributionManagement>
      <snapshotRepository>
        <id>ossrh</id>
        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      </snapshotRepository>
      <repository>
        <id>ossrh</id>
        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
      </repository>
    </distributionManagement>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <okhttp3.version>4.7.2</okhttp3.version>
        <surefire.version>3.0.0-M4</surefire.version>
        <jacoco.version>0.8.5</jacoco.version>
    </properties>

    <build>
        <defaultGoal>install</defaultGoal>
        <finalName>${project.artifactId}-${project.version}</finalName>

        <resources>
          <resource>
            <directory>src/main/resources</directory>
            <includes>
              <include>version.properties</include>
            </includes>
            <filtering>true</filtering>
          </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <forkCount>0</forkCount>
                    <argLine>${surefireArgLine} --illegal-access=permit</argLine>
                    <includes>
                        <include>**/*Test.*</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/v3/requests/*</exclude>
                        <exclude>**/v3/resources/*</exclude>
                        <exclude>**/v3/Client.*</exclude>
                        <exclude>**/v3/exception/*</exclude>
                        <exclude>**/v3/QueryParams.*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
                            <propertyName>surefireArgLine</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
              <groupId>org.eluder.coveralls</groupId>
              <artifactId>coveralls-maven-plugin</artifactId>
              <version>4.3.0</version>
              <configuration>
                <!-- TODO: Don't commit repoToken pubically! Find a way to integrate securely -->
                <repoToken>yourcoverallsprojectrepositorytoken</repoToken>
                <jacocoReports>
                  <param>${project.reporting.outputDirectory}/jacoco-ut/jacoco.xml</param>
                </jacocoReports>
              </configuration>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-source-plugin</artifactId>
              <version>2.2.1</version>
              <executions>
                <execution>
                  <id>attach-sources</id>
                  <goals>
                    <goal>jar-no-fork</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>2.9.1</version>
              <configuration>
                <source>${java.version}</source>
              </configuration>
              <executions>
                <execution>
                  <id>attach-javadocs</id>
                  <goals>
                    <goal>jar</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId> 
              <artifactId>maven-gpg-plugin</artifactId>
              <version>1.5</version> 
              <executions>
                <execution>
                  <id>sign-artifacts</id> 
                  <phase>deploy</phase>
                  <goals>
                    <goal>sign</goal>
                  </goals>
                  <configuration>
                    <gpgArguments>
                      <arg>--pinentry-mode</arg>
                      <arg>loopback</arg> 
                    </gpgArguments> 
                  </configuration>
                </execution> 
              </executions>
            </plugin>
            <plugin>
              <groupId>org.sonatype.plugins</groupId>
              <artifactId>nexus-staging-maven-plugin</artifactId>
              <version>1.6.7</version>
              <extensions>true</extensions>
              <configuration>
                <serverId>ossrh</serverId>
                <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                <autoReleaseAfterClose>true</autoReleaseAfterClose>
              </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp3.version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>logging-interceptor</artifactId>
            <version>${okhttp3.version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>mockwebserver</artifactId>
            <version>${okhttp3.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.10.6</version>
        </dependency>
        <dependency>
            <groupId>com.fatboyindustrial.gson-jodatime-serialisers</groupId>
            <artifactId>gson-jodatime-serialisers</artifactId>
            <version>1.8.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire</artifactId>
            <version>${surefire.version}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.6.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.version}</version>
            <type>maven-plugin</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.3.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Specify versions of transitive dependencies
            xerces:xercesImpl introduced through jacoco-maven-plugin and doxia-core
              - can be removed when mvn dependency:list shows version 2.12.0 or higher and no snyk reported vulnerabilities
            plexus:plexus-utils introduced through jacoco-maven-plugin, maven-compiler-plugin, and others
              - can be removed when mvn dependency:list shows version 3.0.24 or higher and no snyk reported vulnerabilities
        -->
        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.12.0</version>
        </dependency>
        <dependency>
          <groupId>org.codehaus.plexus</groupId>
          <artifactId>plexus-utils</artifactId>
          <version>3.2.1</version>
      </dependency>
    </dependencies>
</project>
